<resources>
    <string name="app_name">DauBep</string>
    <string name="header_hello">Xin chào ABC, \nBạn có những nguyên liệu gì?</string>
    <string name="personal">Cá nhân</string>
    <string name="search_hint">Tìm nguyên liệu</string>
    <string name="btn_home">Trang chủ</string>
    <string name="btn_community">Cộng đồng</string>
    <string name="btn_scan">Quét</string>
    <string name="btn_notification">Thông báo</string>
    <string name="btn_personal">Cá nhân</string>
    <string name="img_meat">Thịt</string>
    <string name="img_egg">Trứng</string>
    <string name="img_vegetable">Rau củ</string>
    <string name="img_bean">Đậu</string>
    <string name="title_recommend">Đề xuất</string>
    <string name="title_pho">Phở Bò</string>
    <string name="title_noodle_soup">Bún Riêu</string>
    <string name="title_hotpot">Lẩu</string>
    <string name="title_salad">Salad</string>
    <string name="title_barbecue">Thịt nướng</string>
    <string name="title_promotion">Khuyến mãi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_msg">Xin chào cậu</string>
    <string name="second_msg">Chào cậu nha</string>
    <string name="third_msg">Tớ thấy cậu nấu món gỏi gà ngon quá, cậu chỉ tớ nấu được không?</string>
    <string name="fourth_msg">Thế thì 4h chiều được không nè?</string>
    <string name="fifth_msg">Hehe, được chứ. Cậu rảnh mấy giờ để tớ video call chỉ cho?</string>
    <string name="sixth_msg">Uhm, vậy mình chốt 4h chiều ha</string>
    <string name="seventh_msg">Nhập tin nhắn ...</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="noti_1"><b>Toto</b> đã nhắn tin bạn</string>
    <string name="noti_2"><b>Phi Hung</b> đã bình luận về bài viết mà bạn theo dõi</string>
    <string name="noti_3"><b>Hệ thống thông báo</b><br /> Bảo trì ứng dụng lúc 0h - 2h 15/10/2021</string>
    <string name="noti_4"><b>Iris Shark</b> đã đăng một bài viết mới</string>
    <string name="noti_5"><b>Hai Dang</b> đã bình luận về bài viết mà bạn theo dõi</string>
    <string name="noti_6"><b>Hệ thống thông báo</b><br /> Bảo trì ứng dụng lúc 0h - 1h 10/10/2021</string>
    <string name="noti_7"><b>Hệ thống thông báo</b><br /> Bảo trì ứng dụng lúc 0h - 2h 8/10/2021</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pho_detail">1 kg xương sườn bò<br />Bánh phở<br />1 củ gừng<br />1 củ hành tây, vài củ hành tím
        <br />Gia vị nấu phở: tiểu hồi, đại hồi, đinh hương, quế cây, hạt ngò, thảo quả (siêu thị có bán gói đầy đủ)
        <br />Bắp bò thái mỏng
    </string>
    <string name="pho_1">Rửa sạch xương, cho vào nồi với nước, muối, đun đến khi sôi thì vớt bỏ bọt.
        Đun 30p, tắt bếp để nguội, đun lần 2 30p, tắt bếp để nguội, đun lần 3 1 tiếng. Đun nhiều lần
        giúp thịt mềm nhanh mà đỡ tốn điện hơn đun nhiều giờ cùng 1 lúc. Nhớ để lửa nhỏ ko trào, hẹn
        giờ cho bếp để ko phải canh, đun từ tối hôm trước 2 lần thì sáng hôm sau chỉ cần đun lại lần
        3 là ăn được.</string>
    <string name="pho_2">
        Hành tây, gừng rửa sạch, cắt đôi. Hành tím bóc vỏ, rửa sạch. Cho tất cả vào nckd nướng 180đ 10p. Gia vị phở nướng nckd 140d 5p. Cho tất cả vào nồi trc khi đun lần 3. Sau khi ninh xong thì vớt bỏ gia vị, vớt xương ra, nêm hạt nêm, nước mắm, muối, đợi nước sôi lại là ăn được
    </string>
    <string name="pho_3">
        Rau sống rửa sạch, chẻ đầu hành, phần thân hành cắt nhỏ, phở trụng lại cho nóng, rồi xếp tất cả ra tô, chan nước vào.
    </string>
    <string name="pho_4">
        Lưu ý: dùng xương ống sẽ ngọt nước hơn xương sườn nhưng xương sườn có nhiều thịt để gặm hơn. Có thể kết hợp cả 2 loại tuỳ sở thích.
        <br/>
        Lưu ý 2: nêm nước dùng mặn 1 chút khi chan vào phở ăn sẽ vừa, nếu nêm vừa thì chan vào phở sẽ nhạt.
    </string>
    <string name="cmt1">
        <b>Jisoo</b> hay quá em ơi
    </string>
</resources>